stock-ticker/stock-ticker-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stock-ticker-service
spec:
  selector:
    app: stock-ticker
  type: NodePort
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30400
